# glmx

./: CMakeLists.txt
include/glmx/: common.h  kinematic_map.h  pose.h  spatial.h  transform.h
tests/: test_kinematic_map.cpp  test_main.cpp  test_spatial.cpp  test_transform.cpp
